--- a/skagster.html
+++ b/skagster.html
@@ -173,11 +173,11 @@ body {
   <a href="#default" class="logo">Sydney Skaggs Photography</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
-    <a href="#published">Published</a>
-    <a href="#contact">Contact</a>
-    <a href="#info">Info</a>
-    <a href="#bookanappointment">Book An Appointment</a>
-    <a href="#gallery">Gallery</a>
+    <a href="published.html">Published</a>
+    <a href="contact.html">Contact</a>
+    <a href="info.html">Info</a>
+    <a href="bookanappointment.html">Book An Appointment</a>
+    <a href="gallery.html">Gallery</a>
   </div>
 </div>
 <div style="padding-top:    15px;">
