--- a/skagster.html
+++ b/skagster.html
@@ -165,14 +165,13 @@ body {
        opacity: 0.4;
     }
     </style>
-
 </head>
 <body>
 
 <div class="header">
   <a href="#default" class="logo">Sydney Skaggs Photography</a>
   <div class="header-right">
-    <a class="active" href="#home">Home</a>
+    <a class="active" href="skagster.html">Home</a>
     <a href="published.html">Published</a>
     <a href="contact.html">Contact</a>
     <a href="info.html">Info</a>
