--- a/gallery.html
+++ b/gallery.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        
-    </head>
-    <body>
-        Gallery Page
-    </body>
-</html><!DOCTYPE html>
-<html lang="en">
-    <head>
         <style>
             * {box-sizing: border-box;}
 
@@ -177,7 +169,7 @@
         <div class="header">
             <a href="#default" class="logo">Sydney Skaggs Photography</a>
             <div class="header-right">
-              <a class="active" href="#home">Home</a>
+              <a class="active" href="skagster.html">Home</a>
               <a href="published.html">Published</a>
               <a href="contact.html">Contact</a>
               <a href="info.html">Info</a>
