--- a/skagster.html
+++ b/skagster.html
@@ -169,9 +169,8 @@ body {
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">Sydney Skaggs Photography</a>
+  <a href="skagster.html" class="logo">Sydney Skaggs Photography</a>
   <div class="header-right">
-    <a class="active" href="skagster.html">Home</a>
     <a href="published.html">Published</a>
     <a href="contact.html">Contact</a>
     <a href="info.html">Info</a>
