--- a/gallery.html
+++ b/gallery.html
@@ -247,7 +247,7 @@
         </div>
 
         <div class="footer">
-            <p>Made by Ethan Kelley | Powered by Lorem Ipsum </p>
+            <p>Made by Ethan Kelley | Powered by Git Hub </p>
           </div>
 
           <div id="gallery">
@@ -282,7 +282,6 @@
             <img src="photo28.JPG">
             <img src="photo29.JPG">
             <img src="photo30.JPG">
-
            </div>
     </body>
 </html>
