--- a/published.html
+++ b/published.html
@@ -179,7 +179,7 @@
         </div>
 
         <div class="footer">
-            <p>Made by Ethan Kelley | Powered by Lorem Ipsum </p>
+            <p>Made by Ethan Kelley | Powered by Git Hub </p>
           </div>
           
     </body>
