--- a/bookanappointment.html
+++ b/bookanappointment.html
@@ -178,7 +178,7 @@
         </div>
 
         <div class="footer">
-            <p>Made by Ethan Kelley | Powered by Lorem Ipsum </p>
+            <p>Made by Ethan Kelley | Powered by Git Hub </p>
           </div>
 
         Published Page
