--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ body {
 <body>
 
 <div class="header">
-  <a href="skagster.html" class="logo">Sydney Skaggs Photography</a>
+  <a href="index.html" class="logo">Sydney Skaggs Photography</a>
   <div class="header-right">
     <a href="published.html">Published</a>
     <a href="contact.html">Contact</a>
