--- a/index.html
+++ b/index.html
@@ -155,12 +155,8 @@ body {
 
 <style>
     .footer {
-       position: fixed;
-       left: 0;
-       bottom: 0;
        width: 100%;
-       background-color: white;
-       color: black;
+       color: gray;
        text-align: center;
        opacity: 0.4;
     }
@@ -239,9 +235,9 @@ body {
     }
     </script>
 
-<div class="footer">
-  <p>Made by Ethan Kelley | Powered by Git Hub </p>
-</div>
+<Footer class="footer">
+    <p>Made by Ethan Kelley | Powered by Git Hub </p>
+  </Footer>
 
 </body>
 </html>
