--- a/bookanappointment.html
+++ b/bookanappointment.html
@@ -154,15 +154,11 @@
           
           <style>
               .footer {
-                 position: fixed;
-                 left: 0;
-                 bottom: 0;
-                 width: 100%;
-                 background-color: white;
-                 color: black;
-                 text-align: center;
-                 opacity: 0.4;
-              }
+       width: 100%;
+       color: gray;
+       text-align: center;
+       opacity: 0.4;
+    }
               </style>
     </head>
     <body>
@@ -177,9 +173,9 @@
             </div>
         </div>
 
-        <div class="footer">
+        <Footer class="footer">
             <p>Made by Ethan Kelley | Powered by Git Hub </p>
-          </div>
+          </Footer>
 
         Published Page
     </body>
