--- a/published.html
+++ b/published.html
@@ -235,7 +235,7 @@
     </head>
     <body>
         <div class="header">
-            <a href="index.html" class="logo">Sydney Skaggs Photography</a>
+            <a href="skagster.html" class="logo">Sydney Skaggs Photography</a>
             <div class="header-right">
               <a href="published.html">Published</a>
               <a href="contact.html">Contact</a>
