--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@ body {
     float: none;
   }
 }
-</style>
 
-<style>
     * {box-sizing: border-box}
     body {font-family: Verdana, sans-serif; margin:0}
     .mySlides {display: none}
@@ -151,9 +149,7 @@ body {
     @media only screen and (max-width: 300px) {
       .prev, .next,.text {font-size: 11px}
     }
-    </style>
 
-<style>
     .footer {
        width: 100%;
        color: gray;
@@ -165,7 +161,7 @@ body {
 <body>
 
 <div class="header">
-  <a href="index.html" class="logo">Sydney Skaggs Photography</a>
+  <a href="skagster.html" class="logo">Sydney Skaggs Photography</a>
   <div class="header-right">
     <a href="published.html">Published</a>
     <a href="contact.html">Contact</a>
@@ -235,9 +231,11 @@ body {
     }
     </script>
 
-<Footer class="footer">
+  <Footer class="footer">
     <p>Made by Ethan Kelley | Powered by Git Hub </p>
   </Footer>
+  
+
 
 </body>
 </html>
