--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@
     </head>
     <body>
         <div class="header">
-            <a href="skagster.html" class="logo">Sydney Skaggs Photography</a>
+            <a href="index.html" class="logo">Sydney Skaggs Photography</a>
             <div class="header-right">
               <a href="published.html">Published</a>
               <a href="contact.html">Contact</a>
