--- a/info.html
+++ b/info.html
@@ -177,6 +177,7 @@
             .section p{
               font-weight: 100;
               text-align: center;
+              padding: 10px;
             }
 
             .section img{
@@ -201,8 +202,8 @@
 
         <div class="section">
           <div class="texts">
-            <h1 style="font-size:3vw;">Contact Me!</h1>
-            <p style="font-size:2vw;">Sydney Skaggs is a student photographer based in Belton, Texas, experianced in: <br><br> family photos <br> senior portraits <br> social events <br> couples portraits <br> sports games <br> specialty portraits <br> <br> Sydney has been Frelancing photography as well as being a part of Belton's very own Tiger Media team for over a year. This wide range of experiance producing professional quality images from sports to couples has prepared her to create images of even greater quality for you!</p>
+            <h1 style="font-size:2vw;">Contact Me!</h1>
+            <p style="font-size:1vw;">Sydney Skaggs is a student photographer based in Belton, Texas, experianced in: <br><br> family photos <br> senior portraits <br> social events <br> couples portraits <br> sports games <br> specialty portraits <br> <br> Sydney has been Frelancing photography as well as being a part of Belton's very own Tiger Media team for over a year. This wide range of experiance producing professional quality images from sports to couples has prepared her to create images of even greater quality for you!</p>
           </div>
            <img src="infophoto.png" alt="oops! something went wrong." class="photo" width="600" height="400">
         </div>
