--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 * {box-sizing: border-box;}
 
@@ -11,52 +12,49 @@ body {
   background: black;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: #5b5f58;
+  position: relative;
+  padding: 14px;
+}
+
+.topnav #myLinks {
+  display: none;
+}
+
+.topnav a {
+  color: black;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 27px;
+  display: block;
+  font-weight: bold;
+  background-color: #5b5f58;
+}
+
+.topnav a.icon {
+  background: #5b5f58;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 14px;
+}
+
+.topnav a:hover {
+  background-color: rgb(166, 166, 166);
+  color: #5b5f58;
+}
+
+.active {
+  background-color: #5b5f58;
+  color: white;
+}
 .header {
   overflow: hidden;
   background-color: #5b5f58;
   padding: 20px 10px;
-}
-
-.header a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px; 
-  line-height: 25px;
-  border-radius: 4px;
-}
-
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.header a:hover {
-  background-color: rgb(172, 172, 172);
-  color: black;
-}
-
-.header a.active {
-  background-color: rgb(0, 0, 0);
-  color: white;
-}
-
-.header-right {
-  float: right;
-}
-
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .header-right {
-    float: none;
-  }
 }
 
     * {box-sizing: border-box}
@@ -160,16 +158,32 @@ body {
 </head>
 <body>
 
-<div class="header">
-  <a href="index.html" class="logo">Sydney Skaggs Photography</a>
-  <div class="header-right">
-    <a href="published.html">Published</a>
-    <a href="contact.html">Contact</a>
-    <a href="info.html">Info</a>
-    <a href="bookanappointment.html">Book An Appointment</a>
-    <a href="gallery.html">Gallery</a>
+  <div class="topnav">
+    <a href="index.html" class="active">Sydney Skaggs Photography</a>
+    <div id="myLinks">
+      <a href="published.html">published</a>
+      <a href="contact.html">Contact</a>
+      <a href="info.html">Info</a>
+      <a href="bookanappointment.html">Book An Appointment</a>
+      <a href="gallery.html">Gallery</a>
+    </div>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
   </div>
-</div>
+
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myLinks");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block";
+      }
+    }
+    </script>
+  
+
 <div style="padding-top:    15px;">
 </div>
 
@@ -234,8 +248,6 @@ body {
   <Footer class="footer">
     <p>Made by Ethan Kelley | Powered by Git Hub </p>
   </Footer>
-  
-
 
 </body>
 </html>
