--- a/index.html
+++ b/index.html
@@ -182,11 +182,12 @@ body {
       }
     }
     </script>
-  
 
 <div style="padding-top:    15px;">
 </div>
 
+  <h1> Sydney Skaggs - A Belton Texas Based Photographer experianced in portraits, social events, senior pictures, and sporting events. </h1>
+  
 <div class="slideshow-container">
 
     <div class="mySlides fade">
