--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ body {
 <div style="padding-top:    15px;">
 </div>
 
-  <h1 style="color:black;"> Sydney Skaggs - A Belton Texas Based Photographer experianced in portraits, social events, senior pictures, and sporting events. </h1>
+  <p1 style="color:black;"> Sydney Skaggs - A Belton Texas Based Photographer experianced in portraits, social events, senior pictures, and sporting events. </p1>
   
 <div class="slideshow-container">
 
