--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="description" content="Proffessional Photography Provided local to Belton Texas. Free Estimates. Family Photos/Senior Portraits/Social Events/Couples Portraits/Sport Games/Speacialty Portraits">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -186,8 +187,6 @@ body {
 <div style="padding-top:    15px;">
 </div>
 
-  <p1 style="color:black;"> Sydney Skaggs - A Belton Texas Based Photographer experianced in portraits, social events, senior pictures, and sporting events. </p1>
-  
 <div class="slideshow-container">
 
     <div class="mySlides fade">
