--- a/bookanappointment.html
+++ b/bookanappointment.html
@@ -111,7 +111,7 @@
         <p class="paragraph">Please fill out the following form to book a photo shoot. <br> I will respond to you shortly!</p>
         
         <div class="Google_form">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-76Tk2ZS6s9KwErc3KE15gwT74glIgLbNcqp7OPQBASLIwA/viewform?embedded=true" width="640" height="1995" frameborder="0" marginheight="5" marginwidth="5" margin: 0 auto; >Loading…</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-76Tk2ZS6s9KwErc3KE15gwT74glIgLbNcqp7OPQBASLIwA/viewform?embedded=true" width="100%" height="1995" frameborder="0" marginheight="5" marginwidth="5" margin: 0 auto; >Loading…</iframe>
         </div>
 
         <Footer class="footer">
