--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
       <div class="topnav">
         <a href="index.html" class="active">Sydney Skaggs Photography</a>
         <div id="myLinks">
-          <a href="published.html">published</a>
+          <!--<a href="published.html">published</a>-->
           <a href="contact.html">Contact</a>
           <a href="info.html">Info</a>
           <a href="bookanappointment.html">Book An Appointment</a>
@@ -134,7 +134,7 @@
         <div class="section">
           <div class="texts">
             <h1 style="font-size:3vw;">Contact Me!</h1>
-            <p style="font-size:2vw;">(254) 624-4168 <br><br>email: contact@sydneyskaggsphoto.com <br><br>social: @sydneyskaggsphoto</p>
+            <p style="font-size:2vw;">(254) 624-4168 <br><br>Email contact@sydneyskaggsphoto.com<br><br>Instagram<br>@sydneyskaggsphoto</p>
           </div>
            <img src="contactphoto.png" alt="oops! something went wrong." class="photo" width="600" height="400">
         </div>
