--- a/gallery.html
+++ b/gallery.html
@@ -130,7 +130,7 @@
     <div class="topnav">
       <a href="index.html" class="active">Sydney Skaggs Photography</a>
       <div id="myLinks">
-        <a href="published.html">published</a>
+        <!--<a href="published.html">published</a>-->
         <a href="contact.html">Contact</a>
         <a href="info.html">Info</a>
         <a href="bookanappointment.html">Book An Appointment</a>
