--- a/info.html
+++ b/info.html
@@ -105,7 +105,7 @@
       <div class="topnav">
         <a href="index.html" class="active">Sydney Skaggs Photography</a>
         <div id="myLinks">
-          <a href="published.html">published</a>
+          <!--<a href="published.html">published</a>-->
           <a href="contact.html">Contact</a>
           <a href="info.html">Info</a>
           <a href="bookanappointment.html">Book An Appointment</a>
@@ -133,7 +133,9 @@
 
         <div class="section">
           <div class="texts">
-            <p style="font-size:2vw;">Sydney Skaggs is a student photographer based in Belton, Texas, experianced in: <br><br> family photos <br> senior portraits <br> social events <br> couples portraits <br> sports games <br> specialty portraits <br> <br> Sydney has been Frelancing photography as well as being a part of Belton's very own Tiger Media team for over a year. This wide range of experiance producing professional quality images from sports to couples has prepared her to create images of even greater quality for you!</p>
+            <p style="font-size:2vw;">Sydney Skaggs is a photographer based in Belton, Texas, and is experienced in: <br><br> Family Photos <br>
+               Senior Portraits <br> Social Events <br> Couples Portraits <br> Sports Games <br> Specialty Portraits <br> <br>
+              Sydney has been a freelance photographer since August of 2022. She has been a member of Belton High School's Tiger Media team since 2021 and the Head Photographer of Belton New Tech's Blair St. Journal.</p>
           </div>
            <img src="infophoto.png" alt="oops! something went wrong." class="photo" width="600" height="400">
         </div>
